--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='./assets/css/reset.css'>
-    <link rel='stylesheet' href='./assets/css/main.css'>
+    <link rel='stylesheet' href='https://siori413081.github.io/portfolio1/assets/css/main.css'>
     <link rel='stylesheet' href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
 <body>
