--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='./assets/css/reset.css'>
-    <link rel='stylesheet' href='./assets/css/main.css'>
+    <link rel='stylesheet' href='https://siori413081.github.io/portfolio1/./assets/css/main.css'>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -32,7 +32,7 @@
             </div>
             <form method="get" action="#" class="search_container">
                 <input type="text" placeholder="何をお探しですか？">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa fa-search"></i>
             </form>
         </div>
         <div class="header-middle">
@@ -117,41 +117,58 @@
             <img class="heroImage" src="./assets/images/hero1.jpg">
             <div class="discover">
                 <p>DISCOVER</p>
-                <i data-feather="arrow-right" class="arrow-right"></i>
+                <i data-feather="arrow-right" class="hero-arrow-right"></i>
             </div>
         </div>
         <div class="hero">
             <img class="heroImage" src="./assets/images/hero2.jpg">
             <div class="discover">
                 <p>DISCOVER</p>
-                <i data-feather="arrow-right" class="arrow-right"></i>
+                <i data-feather="arrow-right" class="hero-arrow-right"></i>
             </div>
         </div>
     </div>
     <section class="selection">
-        <p class="title">SELECTION</p>
-        <ul class="shopItemList">
-            <li class="shopItem">
-                <img class="shopItemImage" src="./assets/images/selection.jpg">
-                <p class="itemName">メゾン ニャンコ シャツ</p>
-                <p class="yen">¥ 00,000.00</p>
-            </li>
-            <li class="shopItem">
-                <img class="shopItemImage" src="./assets/images/selection.jpg">
-                <p class="itemName">メゾン ニャンコ ニット</p>
-                <p class="yen">¥ 00,000.00</p>
-            </li>
-            <li class="shopItem">
-                <img class="shopItemImage" src="./assets/images/selection.jpg">
-                <p class="itemName">メゾン ニャンコ カーディガン</p>
-                <p class="yen">¥ 00,000.00</p>
-            </li>
-            <li class="shopItem">
-                <img class="shopItemImage" src="./assets/images/selection.jpg">
-                <p class="itemName">メゾン ニャンコ ワンピース</p>
-                <p class="yen">¥ 00,000.00</p>
-            </li>
-        </ul>
+        <div class="selection-top">
+            <p class="title">SELECTION</p>
+            <div class="arrow-wrap">
+                <div class="arrow-left">
+                <button class="arrow-btn js-btn-back" type="button"></button>
+                </div>
+                <div class="arrow-right">
+                <button class="arrow-btn js-btn-next" type="button"></button>
+                </div>
+            </div>
+        </div>
+        <div class="selection-carousel">
+            <ul class="shopItemList">
+                <li class="shopItem">
+                    <img class="shopItemImage" src="./assets/images/selection.jpg">
+                    <p class="itemName">メゾン ニャンコ シャツ</p>
+                    <p class="yen">¥ 00,000.00</p>
+                </li>
+                <li class="shopItem">
+                    <img class="shopItemImage" src="./assets/images/selection.jpg">
+                    <p class="itemName">メゾン ニャンコ ニット</p>
+                    <p class="yen">¥ 00,000.00</p>
+                </li>
+                <li class="shopItem">
+                    <img class="shopItemImage" src="./assets/images/selection.jpg">
+                    <p class="itemName">メゾン ニャンコ カーディガン</p>
+                    <p class="yen">¥ 00,000.00</p>
+                </li>
+                <li class="shopItem">
+                    <img class="shopItemImage" src="./assets/images/selection.jpg">
+                    <p class="itemName">メゾン ニャンコ ワンピース</p>
+                    <p class="yen">¥ 00,000.00</p>
+                </li>
+                <li class="shopItem">
+                    <img class="shopItemImage" src="./assets/images/selection.jpg">
+                    <p class="itemName">メゾン ニャンコ ワンピース</p>
+                    <p class="yen">¥ 00,000.00</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <section class="service">
         <div class="boutique">
