--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel='stylesheet' href='./assets/css/reset.css'>
     <link rel='stylesheet' href='./assets/css/main.css'>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="css/6-1-6.css">
 </head>
 <body>
 <div class="wrapper">
@@ -140,7 +142,6 @@
                 </div>
             </div>
         </div>
-        <div class="selection-carousel">
             <ul class="shopItemList">
                 <li class="shopItem">
                     <img class="shopItemImage" src="./assets/images/selection.jpg">
@@ -168,7 +169,6 @@
                     <p class="yen">¥ 00,000.00</p>
                 </li>
             </ul>
-        </div>
     </section>
     <section class="service">
         <div class="boutique">
@@ -231,5 +231,7 @@
 <script>feather.replace()</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src='./assets/js/main.js'></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 </html>
