--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel='stylesheet' href='./assets/css/reset.css'>
     <link rel='stylesheet' href='https://siori413081.github.io/portfolio1/assets/css/main.css'>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="css/6-1-6.css">
 </head>
 <body>
 <div class="wrapper">
@@ -32,10 +30,20 @@
                 <h1 class="mainTitle">MAISON NYANKO</h1>
                 <p class="subTitle">PARIS</p>
             </div>
-            <form method="get" action="#" class="search_container">
+            <form method="get" action="#" class="search_container open-btn">
                 <input type="text" placeholder="何をお探しですか？">
                 <i class="fa fa-search"></i>
             </form>
+            <nav class="open-nav">
+                <h4 class="open-nav-title">Suggestions</h4>
+                <ul>
+                    <li><a href="#"></a>HOTEL OLYMPIA</li>
+                    <li><a href="#"></a>New In</li>
+                    <li><a href="#"></a>Chillax Cat</li>
+                    <li><a href="#"></a>Dressed Cat</li>
+                    <li><a href="#"></a>Cat Head</li>
+                </ul>
+            </nav>
         </div>
         <div class="header-middle">
             <div class="panel-area">
@@ -232,6 +240,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src='./assets/js/main.js'></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 </html>
