--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             </div>
             <form method="get" action="#" class="search_container open-btn">
                 <input type="text" placeholder="何をお探しですか？">
-                <i class="fa fa-search"></i>
+                <i class="fa fa-search" id="open-btn-search"></i>
+                <i data-feather="x" class="close-btn-x"></i>
             </form>
             <nav class="open-nav">
                 <h4 class="open-nav-title">Suggestions</h4>
