--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
                 <span class="slide-line"></span>
             </nav>
             <div class="hamburger-menu">
-                <label for="menu-btn-check" class="menu-btn"><span></span></label>
+                <label for="menu-btn-check" class="hamburger-menu-btn"><span></span></label>
             </div>
+            <nav class="sp-open-menu">
+                <ul>
+                    <li><a href="#"></a>MAISON NYANKO</li>
+                    <li><a href="#"></a>CAFE NYANKO</li>
+                    <li><a href="#"></a>NYANKO MUSIQUE</li>
+                    <li><a href="#"></a>GALERIE NYANKO</li>
+                </ul>
+            </nav>
             <div class="titleBox">
                 <h1 class="mainTitle">MAISON NYANKO</h1>
                 <p class="subTitle">PARIS</p>
