--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                     <li class="tab">NYANKO MUSIQUE</li>
                     <li class="tab">GALERIE NYANKO</li>
                 </ul>
-                <span class="slide-line"></span>
             </nav>
             <div class="hamburger-menu">
                 <label for="menu-btn-check" class="hamburger-menu-btn"><span></span></label>
             </div>
+            <!--ハンバーガーメニュークリックしたあとのメニュー-->
             <nav class="sp-open-menu">
                 <ul>
                     <li><a href="#"></a>MAISON NYANKO</li>
@@ -43,6 +43,7 @@
                 <i class="fa fa-search" id="open-btn-search"></i>
                 <i data-feather="x" class="close-btn-x"></i>
             </form>
+            <!--検索部分クリックした後の画面-->
             <nav class="open-nav">
                 <h4 class="open-nav-title">Suggestions</h4>
                 <ul>
@@ -54,6 +55,7 @@
                 </ul>
             </nav>
         </div>
+        <!--jQueryでhover後のメニュー-->
         <div class="header-middle">
             <div class="panel-area">
                 <div class="panel active">
@@ -94,6 +96,7 @@
             </div><!--panel-area-->
                     <ul class="header-item">
                         <div class="country">
+                            <i class="fas fa-money-bill-wave-alt"></i>
                             <i data-feather="chevron-down" class="country-arrow"></i>
                         </div>
                         <div class="language">
@@ -104,7 +107,7 @@
                         <i data-feather="briefcase" class="bag"></i>
                     </ul>
         </div><!--header-middle-->
-        <!--modal-->
+        <!--modal画面の中身-->
         <div class="modal" style="display: none;">
             <div class="modal-content">
                 <div class="modal-text">
