--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='./assets/css/reset.css'>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <!--link rel='stylesheet' href='./assets/css/main.css'--><!--コメントアウトで切り替え-->
     <link rel='stylesheet' href='https://siori413081.github.io/portfolio1/assets/css/main.css'>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -162,7 +163,7 @@
                 </div>
             </div>
         </div>
-            <ul class="shopItemList">
+            <ul class="shopItemList selection-slider">
                 <li class="shopItem">
                     <img class="shopItemImage" src="./assets/images/selection.jpg">
                     <p class="itemName">メゾン ニャンコ シャツ</p>
@@ -190,24 +191,22 @@
                 </li>
             </ul>
     </section>
-    <section class="service service-carousel">
-            <div class="service-carousel-area">   
-                <div class="boutique-item service-carousel-list">
+    <section class="service service-slider">
+                <div class="boutique-item">
                     <div class="boutique"></div>
                     <p class="boutiqueTitle">BOUTIQUE</p>
                     <img class="serviceImage" src="./assets/images/boutique.jpg">
                 </div>
-                <div class="cafe-item service-carousel-list">
+                <div class="cafe-item">
                     <div class="cafe"></div>
                     <p class="cafeTitle">CAFE</p>
                     <img class="serviceImage" src="./assets/images/cafe.jpg">
                 </div>
-                <div class="musique-item service-carousel-list">
+                <div class="musique-item">
                     <div class="musique"></div>
                     <p class="musiqueTitle">MUSIQUE</p>
                     <img class="serviceImage" src="./assets/images/musique.jpg">
                 </div>
-            </div>
     </section>
     <section class="newsLetter">
         <p class="message">NEWSLETTER MAISON NYANKO</p>
@@ -254,8 +253,8 @@
     </footer>
 </div>
 <script>feather.replace()</script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src='./assets/js/main.js'></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src='./assets/js/main.js'></script>
 </body>
 </html>
